--- a/website/epubit/html/图书列表.html
+++ b/website/epubit/html/图书列表.html
@@ -496,14 +496,14 @@
 							<div class="media">
 								<div class="media-left">
 									<a href="">
-										<img class="media-object" src="../static/images/temp/2.png" alt="">
+										<img class="media-object" src="../static/images/temp/11.png" alt="">
 									</a>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">JavaScript高效图形编程（修订版）<i class="ico ico-book"></i><i class="ico ico-ebook"></i></h4>
+									<h4 class="media-heading"><a href="">JavaScript高效图形编程（修订版）</a><i class="ico ico-book"></i><i class="ico ico-ebook"></i></h4>
 									<div>[英]克莱儿·麦克福尔</div>
 									<div class="blk5"></div>
-									<div class="text-muted">本书是一本具有很强实操性的JavaScript图书，全书共分10章，涵盖的主要内容有：JavaScript的面向对象机制、JavaScript性能优化、jQuery和ExtJS库、高级UI设计、Web游戏开发、面向...</div>
+									<div class="text-muted"><a href="" class="text-muted">本书是一本具有很强实操性的JavaScript图书，全书共分10章，涵盖的主要内容有：JavaScript的面向对象机制、JavaScript性能优化、jQuery和ExtJS库、高级UI设计、Web游戏开发、面向...</a></div>
 									<div class="blk10"></div>
 									<div class="text-muted">
 										推荐：73052 评论：4288
@@ -511,10 +511,68 @@
 								</div>
 								<div class="media-right">
 							        <div class="price-box">
-							        	<div>电子书价格</div>
-							        	<div class="price">￥：66.20</div>
-							        	<div>纸质版价格-平装</div>
-							        	<div class="price">￥：102.20</div>
+							        	<div>电子书</div>
+							        	<div class="price">￥66.20</div>
+							        	<div>纸质版-平装</div>
+							        	<div class="price">￥102.20</div>
+							        </div>
+							    </div>
+							</div>
+						</div>
+						<!-- 一本书 结束 -->
+						<!-- 一本书 开始 -->
+						<div class="col-md-12">
+							<div class="media">
+								<div class="media-left">
+									<a href="">
+										<img class="media-object" src="../static/images/temp/12.png" alt="">
+									</a>
+								</div>
+								<div class="media-body">
+									<h4 class="media-heading"><a href="">JavaScript高效图形编程（修订版）</a><i class="ico ico-book"></i><i class="ico ico-ebook"></i></h4>
+									<div>[英]克莱儿·麦克福尔</div>
+									<div class="blk5"></div>
+									<div class="text-muted"><a href="" class="text-muted">本书是一本具有很强实操性的JavaScript图书，全书共分10章，涵盖的主要内容有：JavaScript的面向对象机制、JavaScript性能优化、jQuery和ExtJS库、高级UI设计、Web游戏开发、面向...</a></div>
+									<div class="blk10"></div>
+									<div class="text-muted">
+										推荐：73052 评论：4288
+									</div>
+								</div>
+								<div class="media-right">
+							        <div class="price-box">
+							        	<div>电子书</div>
+							        	<div class="price">￥66.20</div>
+							        	<div>纸质版-平装</div>
+							        	<div class="price">￥102.20</div>
+							        </div>
+							    </div>
+							</div>
+						</div>
+						<!-- 一本书 结束 -->
+						<!-- 一本书 开始 -->
+						<div class="col-md-12">
+							<div class="media">
+								<div class="media-left">
+									<a href="">
+										<img class="media-object" src="../static/images/temp/13.png" alt="">
+									</a>
+								</div>
+								<div class="media-body">
+									<h4 class="media-heading"><a href=" ">JavaScript高效图形编程（修订版）</a><i class="ico ico-book"></i><i class="ico ico-ebook"></i></h4>
+									<div>[英]克莱儿·麦克福尔</div>
+									<div class="blk5"></div>
+									<div class="text-muted"><a href="" class="text-muted">本书是一本具有很强实操性的JavaScript图书，全书共分10章，涵盖的主要内容有：JavaScript的面向对象机制、JavaScript性能优化、jQuery和ExtJS库、高级UI设计、Web游戏开发、面向...</a></div>
+									<div class="blk10"></div>
+									<div class="text-muted">
+										推荐：73052 评论：4288
+									</div>
+								</div>
+								<div class="media-right">
+							        <div class="price-box">
+							        	<div>电子书</div>
+							        	<div class="price">￥66.20</div>
+							        	<div>纸质版-平装</div>
+							        	<div class="price">￥102.20</div>
 							        </div>
 							    </div>
 							</div>
@@ -529,10 +587,10 @@
 									</a>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">JavaScript高效图形编程（修订版）<i class="ico ico-book"></i><i class="ico ico-ebook"></i></h4>
+									<h4 class="media-heading"><a href="">JavaScript高效图形编程（修订版）</a><i class="ico ico-book"></i><i class="ico ico-ebook"></i></h4>
 									<div>[英]克莱儿·麦克福尔</div>
 									<div class="blk5"></div>
-									<div class="text-muted">本书是一本具有很强实操性的JavaScript图书，全书共分10章，涵盖的主要内容有：JavaScript的面向对象机制、JavaScript性能优化、jQuery和ExtJS库、高级UI设计、Web游戏开发、面向...</div>
+									<div class="text-muted"><a href="" class="text-muted">本书是一本具有很强实操性的JavaScript图书，全书共分10章，涵盖的主要内容有：JavaScript的面向对象机制、JavaScript性能优化、jQuery和ExtJS库、高级UI设计、Web游戏开发、面向...</a></div>
 									<div class="blk10"></div>
 									<div class="text-muted">
 										推荐：73052 评论：4288
@@ -540,10 +598,10 @@
 								</div>
 								<div class="media-right">
 							        <div class="price-box">
-							        	<div>电子书价格</div>
-							        	<div class="price">￥：66.20</div>
-							        	<div>纸质版价格-平装</div>
-							        	<div class="price">￥：102.20</div>
+							        	<div>电子书</div>
+							        	<div class="price">￥66.20</div>
+							        	<div>纸质版-平装</div>
+							        	<div class="price">￥102.20</div>
 							        </div>
 							    </div>
 							</div>
@@ -558,10 +616,10 @@
 									</a>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">JavaScript高效图形编程（修订版）<i class="ico ico-book"></i><i class="ico ico-ebook"></i></h4>
+									<h4 class="media-heading"><a href="">JavaScript高效图形编程（修订版）</a></h4>
 									<div>[英]克莱儿·麦克福尔</div>
 									<div class="blk5"></div>
-									<div class="text-muted">本书是一本具有很强实操性的JavaScript图书，全书共分10章，涵盖的主要内容有：JavaScript的面向对象机制、JavaScript性能优化、jQuery和ExtJS库、高级UI设计、Web游戏开发、面向...</div>
+									<div class="text-muted"><a href="" class="text-muted">本书是一本具有很强实操性的JavaScript图书，全书共分10章，涵盖的主要内容有：JavaScript的面向对象机制、JavaScript性能优化、jQuery和ExtJS库、高级UI设计、Web游戏开发、面向...</a></div>
 									<div class="blk10"></div>
 									<div class="text-muted">
 										推荐：73052 评论：4288
@@ -569,68 +627,10 @@
 								</div>
 								<div class="media-right">
 							        <div class="price-box">
-							        	<div>电子书价格</div>
-							        	<div class="price">￥：66.20</div>
-							        	<div>纸质版价格-平装</div>
-							        	<div class="price">￥：102.20</div>
-							        </div>
-							    </div>
-							</div>
-						</div>
-						<!-- 一本书 结束 -->
-						<!-- 一本书 开始 -->
-						<div class="col-md-12">
-							<div class="media">
-								<div class="media-left">
-									<a href="">
-										<img class="media-object" src="../static/images/temp/2.png" alt="">
-									</a>
-								</div>
-								<div class="media-body">
-									<h4 class="media-heading">JavaScript高效图形编程（修订版）<i class="ico ico-book"></i><i class="ico ico-ebook"></i></h4>
-									<div>[英]克莱儿·麦克福尔</div>
-									<div class="blk5"></div>
-									<div class="text-muted">本书是一本具有很强实操性的JavaScript图书，全书共分10章，涵盖的主要内容有：JavaScript的面向对象机制、JavaScript性能优化、jQuery和ExtJS库、高级UI设计、Web游戏开发、面向...</div>
-									<div class="blk10"></div>
-									<div class="text-muted">
-										推荐：73052 评论：4288
-									</div>
-								</div>
-								<div class="media-right">
-							        <div class="price-box">
-							        	<div>电子书价格</div>
-							        	<div class="price">￥：66.20</div>
-							        	<div>纸质版价格-平装</div>
-							        	<div class="price">￥：102.20</div>
-							        </div>
-							    </div>
-							</div>
-						</div>
-						<!-- 一本书 结束 -->
-						<!-- 一本书 开始 -->
-						<div class="col-md-12">
-							<div class="media">
-								<div class="media-left">
-									<a href="">
-										<img class="media-object" src="../static/images/temp/2.png" alt="">
-									</a>
-								</div>
-								<div class="media-body">
-									<h4 class="media-heading">JavaScript高效图形编程（修订版）</h4>
-									<div>[英]克莱儿·麦克福尔</div>
-									<div class="blk5"></div>
-									<div class="text-muted">本书是一本具有很强实操性的JavaScript图书，全书共分10章，涵盖的主要内容有：JavaScript的面向对象机制、JavaScript性能优化、jQuery和ExtJS库、高级UI设计、Web游戏开发、面向...</div>
-									<div class="blk10"></div>
-									<div class="text-muted">
-										推荐：73052 评论：4288
-									</div>
-								</div>
-								<div class="media-right">
-							        <div class="price-box">
-							        	<div>电子书价格</div>
-							        	<div class="price">￥：66.20</div>
-							        	<div>纸质版价格-平装</div>
-							        	<div class="price">￥：102.20</div>
+							        	<div>电子书</div>
+							        	<div class="price">￥66.20</div>
+							        	<div>纸质版-平装</div>
+							        	<div class="price">￥102.20</div>
 							        </div>
 							    </div>
 							</div>
@@ -643,7 +643,7 @@
 						<!-- 一本书 开始 -->
 						<div class="col-md-3 col-sm-4 col-xs-12 book-thumbnail">
 							<div class="pic">
-								<a href=""><span class="img"><img src="../static/images/temp/2.png" alt=""><i class="ico ico-ebook-2"></i></span></a>
+								<a href=""><span class="img"><img src="../static/images/temp/11.png" alt=""><i class="ico ico-ebook-2"></i></span></a>
 								
 							</div>
 							<div class="name">
@@ -654,7 +654,7 @@
 						<!-- 一本书 开始 -->
 						<div class="col-md-3 col-sm-4 col-xs-12 book-thumbnail">
 							<div class="pic">
-								<a href=""><span class="img"><img src="../static/images/temp/1.png" alt=""></span></a>
+								<a href=""><span class="img"><img src="../static/images/temp/12.png" alt=""></span></a>
 							</div>
 							<div class="name">
 								<a href="">javaScript高效javaScrjavaScript高效图形javaScript高效图形ipt高效图形图形编程（修订版）</a>
@@ -674,7 +674,7 @@
 						<!-- 一本书 开始 -->
 						<div class="col-md-3 col-sm-4 col-xs-12 book-thumbnail">
 							<div class="pic">
-								<a href=""><span class="img"><img src="../static/images/temp/1.png" alt=""></span></a>
+								<a href=""><span class="img"><img src="../static/images/temp/11.png" alt=""></span></a>
 							</div>
 							<div class="name">
 								<a href="">javaScript高效javaScrjavaScript高效图形javaScript高效图形ipt高效图形图形编程（修订版）</a>
@@ -694,7 +694,7 @@
 						<!-- 一本书 开始 -->
 						<div class="col-md-3 col-sm-4 col-xs-12 book-thumbnail">
 							<div class="pic">
-								<a href=""><span class="img"><img src="../static/images/temp/1.png" alt=""></span></a>
+								<a href=""><span class="img"><img src="../static/images/temp/13.png" alt=""></span></a>
 							</div>
 							<div class="name">
 								<a href="">javaScript高效javaScrjavaScript高效图形javaScript高效图形ipt高效图形图形编程（修订版）</a>
