--- a/website/epubit/html/搜索结果页.html
+++ b/website/epubit/html/搜索结果页.html
@@ -503,6 +503,8 @@
 		</div>
 
 		<div class="col-md-8 col-sm-12">
+			
+			<div class="page-tit">您搜索的 <em class="key">XXX</em> 结果如下</div>
 
 			<div class="panel">
 			<div class="top-panel clearfix">
