--- a/website/epubit/html/图书列表.html
+++ b/website/epubit/html/图书列表.html
@@ -701,6 +701,16 @@
 							</div>
 						</div>
 						<!-- 一本书 结束 -->
+						<!-- 一本书 开始 -->
+						<div class="col-md-3 col-sm-4 col-xs-12 book-thumbnail">
+							<div class="pic">
+								<a href=""><span class="img"><img src="../static/images/temp/2.png" alt=""></span></a>
+							</div>
+							<div class="name">
+								<a href="">javaScript高效图形编程（修订版）</a>
+							</div>
+						</div>
+						<!-- 一本书 结束 -->
 					</div>
 					<!-- 上图下标题类型 结束 -->
 				</div>
