--- a/website/epubit/html/图书详情.html
+++ b/website/epubit/html/图书详情.html
@@ -414,12 +414,68 @@
 	<div class="container bookdetail">
 		<div class="row">
 			<div class="col-md-12">
+				<ol class="breadcrumb">
+				  <li><a href="#">软件开发</a></li>
+				  <li><a href="#">架构与工具</a></li>
+				  <li class="active">Python</li>
+				</ol>
+			</div>
+			<div class="col-md-12">
 				<div class="media bookdetail-panel">
 					<div class="media-left">
 						<img src="../static/images/temp/2.png" alt="">
 					</div>
 					<div class="media-body">
-						123
+						<div class="bookDeHd clearfix">
+							<div class="l-panel">
+								<h2>“笨办法”学Python（第3版）</h2>
+								<div class="author"><span>[美]Zed A. Shaw (作者)</span>王巍巍 (译者)</div>
+							</div>
+							<div class="r-panel">
+								<a href="" class="bor-r-g">
+									<span class="fcg top">2160</span>
+									<span class="txt">推荐</span>
+								</a>
+								<a href="" class="has">
+									<span class="top glyphicon glyphicon-heart"></span>
+									<span class="txt">收藏</span>
+								</a>
+							</div>
+						</div>
+						<div class="bookDeBd">
+							“笨办法”学Python(第3版)》是一本Python入门书籍，适合对计算机了解不多，没有学过编程，但对编程感兴趣的读者学习使用。这本书以习题的方式引导读者一步一步学习编程，从简单的打印一直讲到完整项目的实现，让初学者从基础的编程技术入手，最终体验到软件开发的基本过程。“笨办法”学Python(第3版)》是一本Python入门书籍本书以习题的方式引导读者一步一步学习编程，技术入手<a href="" data-toggle="modal" data-target="#myModal">...显示全部</a>
+						</div>
+						<div class="bookDeFd clearfix">
+							<ul>
+								<li>
+									<label>
+										<input type="radio">
+										<span>纸质版</span>
+										<span class="price">￥100.00</span>
+									</label>
+								</li>
+								<li>
+									<label>
+										<input type="radio">
+										<span>电子版</span>
+										<span class="price">￥10.00</span>
+									</label>
+								</li>
+								<li>
+									<label>
+										<input type="radio">
+										<span>纸质版+电子版</span>
+										<span class="price">￥102.00</span>
+									</label>
+								</li>
+							</ul>
+							<span class="btn-box">
+								<a href="" class="btn btn-default">现在购买</a>
+								<span class="stp"></span>
+								<a href="" class="btn btn-default">下载PDF样章</a>
+								<a href="" class="btn btn-default">配套文件下载</a>
+							</span>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -429,23 +485,62 @@
 				<div class="g-block-2">
 					<div class="hd clearfix">
 						<div class="l-panel"><span class="tit">本书目录</span></div>
-						<div class="r-panel">*带下划线的章节可以在线阅读</div>
 					</div>
-					<div class="bd">
-						<ul class="bookmenu">
-							<li>版权声明</li>
-							<li><a href="">内容提要</a></li>
-							<li><a href="">前言</a></li>
-							<li><a href="">习题0　准备工作</a></li>
-							<li><a href="">译者序</a></li>
-							<li><a href="">Mac OSX</a></li>
-							<li>Windows</li>
-							<li>给新手的告诫</li>
-							<li><a href="">习题1　第一个程序</a></li>
-							<li>应该看到的结果</li>
-						</ul>
-						<a href="" class="more">点击展开全部章节</a>
-					</div>
+					<table class="table table-hover table-responsive bookmenu">
+						<tbody>
+							<tr>
+								<td>
+									<a href="">版权声明</a>
+									<a href="" class="read-btn">阅读</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">内容提要</a>
+									<a href="" class="read-btn">阅读</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">前言</a>
+									<a href="" class="read-btn">阅读</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">习题0　准备工作</a>
+									<a href="" class="read-btn">阅读</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Mac OSX</a>
+									<a href="" class="read-btn">阅读</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									Windows
+								</td>
+							</tr>
+							<tr>
+								<td>
+									给新手的告诫
+								</td>
+							</tr>
+							<tr>
+								<td>
+									习题1　第一个程序
+								</td>
+							</tr>
+							<tr>
+								<td>
+									应该看到的结果
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<a href="" class="more">点击展开全部章节</a>
 				</div>
 
 				<div class="g-block-2">
@@ -580,6 +675,40 @@
 						<ul>
 							<li>本书目前没有勘误。</li>
 						</ul>
+						<div class="media">
+							<div class="media-left">
+								<a href=""><img src="../static/images/temp/1.png" alt=""></a>
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">页码：3 • 行数：3 •</h4>
+								<div class="blk5"></div>
+								<div>Docker 是一个开源的应用容器引擎，开发者可以利用Docker  </div>
+								<div class="blk5"></div>
+								<div class="text-muted">
+									<div class="fs12 clearfix">
+										<div class="l-panel">小胖提交</div>
+										<div class="r-panel">2015/02/12 13:24:20 </div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="media">
+							<div class="media-left">
+								<a href=""><img src="../static/images/temp/1.png" alt=""></a>
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">页码：3 • 行数：3 •</h4>
+								<div class="blk5"></div>
+								<div>中先介绍Docker 及其组件的基础知识，然后用Docker 构建容器和服务来完成各种任务</div>
+								<div class="blk5"></div>
+								<div class="text-muted">
+									<div class="fs12 clearfix">
+										<div class="l-panel">北林码农提交</div>
+										<div class="r-panel">2015/02/12 13:24:20 </div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -731,6 +860,66 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="g-block-2">
+					<div class="hd clearfix">
+						<div class="l-panel">
+							<span class="tit">
+								购买本书用户
+							</span>
+						</div>
+					</div>
+					<div class="bd row author-side">
+						<div class="item col-lg-3 col-md-4 col-sm-3 col-xs-6">
+							<a href="">
+								<img src="../static/images/temp/3.png" alt="">
+								<span class="name">北岛</span>
+							</a>
+						</div>
+						<div class="item col-lg-3 col-md-4 col-sm-3 col-xs-6">
+							<a href="">
+								<img src="../static/images/temp/3.png" alt="">
+								<span class="name">北岛北岛北岛北岛北岛</span>
+							</a>
+						</div>
+						<div class="item col-lg-3 col-md-4 col-sm-3 col-xs-6">
+							<a href="">
+								<img src="../static/images/temp/3.png" alt="">
+								<span class="name">北岛</span>
+							</a>
+						</div>
+						<div class="item col-lg-3 col-md-4 col-sm-3 col-xs-6">
+							<a href="">
+								<img src="../static/images/temp/3.png" alt="">
+								<span class="name">北岛</span>
+							</a>
+						</div>
+						<div class="item col-lg-3 col-md-4 col-sm-3 col-xs-6">
+							<a href="">
+								<img src="../static/images/temp/3.png" alt="">
+								<span class="name">北岛</span>
+							</a>
+						</div>
+						<div class="item col-lg-3 col-md-4 col-sm-3 col-xs-6">
+							<a href="">
+								<img src="../static/images/temp/3.png" alt="">
+								<span class="name">北岛北岛北岛北岛北岛</span>
+							</a>
+						</div>
+						<div class="item col-lg-3 col-md-4 col-sm-3 col-xs-6">
+							<a href="">
+								<img src="../static/images/temp/3.png" alt="">
+								<span class="name">北岛</span>
+							</a>
+						</div>
+						<div class="item col-lg-3 col-md-4 col-sm-3 col-xs-6">
+							<a href="">
+								<img src="../static/images/temp/3.png" alt="">
+								<span class="name">北岛</span>
+							</a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -740,6 +929,35 @@
 			&copy; 2014异步社区 <span>·</span> 人民邮电出版社 <span>·</span> All rights reserved
 		</div>
 	</footer>
+
+
+
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">
+	        	“笨办法”学Python（第3版）
+	        	<div class="blk5"></div>
+	        	<div class="submodalt">[美]Zed A. Shaw (作者)王巍巍 (译者)</div>
+	        </h4>
+	      </div>
+	      <div class="modal-body">
+			“笨办法”学Python(第3版)》是一本Python入门书籍，适合对计算机了解不多，没有学过编程，但对编程感兴趣的读者学习使用。这本书以习题的方式引导读者一步一步学习编程，从简单的打印一直讲到完整项目的实现，让初学者从基础的编程技术入手，最终体验到软件开发的基本过程。“笨办法”学Python(第3版)》是一本Python入门书籍本书以习题的方式引导读者一步一步学习编程，技术入手“笨办法”学Python(第3版)》是一本Python入门书籍，适合对计算机了解不多，没有学过编程，但对编程感兴趣的读者学习使用。这本书以习题的方式引导读者一步一步学习编程，从简单的打印一直讲到完整项目的实现，让初学者从基础的编程技术入手，最终体验到软件开发的基本过程。“笨办法”学Python(第3版)》是一本Python入门书籍本书以习题的方式引导读者一步一步学习编程，技术入手
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+
+
+
+
 
 <script>
 	$(function () {
