--- a/website/epubit/html/技术圈.html
+++ b/website/epubit/html/技术圈.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>技术圈-异步社区</title>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="format-detection" content="telephone=no" />
@@ -397,7 +397,7 @@
 					<li class="dropdown">
 						<div class="arr"><span class="addon">15</span></div>
 						<a href="" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-							<span class="glyphicon glyphicon-envelope hidden-xs"></span>
+							<span class="glyphicon glyphicon-bell hidden-xs"></span>
 							<span class="visible-xs-inline-block">私信</span>
 							<b class="caret visible-xs-inline-block"></b>
 						</a>
