--- a/website/epubit/html/未登录.html
+++ b/website/epubit/html/未登录.html
@@ -367,44 +367,15 @@
 						<input type="text" class="txt" placeholder="搜索图书名称/作者/类别">
 					</div>
 				</div>
-				<ul class="nav navbar-nav navbar-right o-box">
-					<li class="dropdown">
-						<div class="arr hidden-xs"></div>
-						<a href="" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-							<img src="../static/images/temp/1.png" alt="" class="userpic hidden-xs">
-							<span class="visible-xs-inline-block">个人信息</span>
-							<b class="caret visible-xs-inline-block"></b>
-						</a>
-						<ul class="dropdown-menu">
-							<li>
-								<a href="">我的主页</a>
-							</li>
-							<li>
-								<a href="">我的账户</a>
-							</li>
-							<li>
-								<a href="">购物筐</a>
-							</li>
-							<li>
-								<a href="">设置</a>
-							</li>
-							<li>
-								<a href="">私信</a>
-							</li>
-						</ul>
+				<ul class="nav navbar-nav navbar-right nologin">
+					<li>
+						<a href="">购物袋(12)</a>
 					</li>
-					<li class="dropdown">
-						<div class="arr"><span class="addon">15</span></div>
-						<a href="" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-							<span class="glyphicon glyphicon-bell hidden-xs"></span>
-							<span class="visible-xs-inline-block">私信</span>
-							<b class="caret visible-xs-inline-block"></b>
-						</a>
-						<ul class="dropdown-menu">
-							<li>
-								<a href="">私信</a>
-							</li>
-						</ul>
+					<li>
+						<a href="">注册</a>
+					</li>
+					<li>
+						<a href="">登录</a>
 					</li>
 				</ul>
 			</div>
